Add sort in GetAll method for adverts
